--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "next": "16.1.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -17,6 +18,11 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
+    "@tailwindcss/postcss": "^4.0.0",
+    "autoprefixer": "10.4.20",
+    "daisyui": "^5.5.0",
+    "postcss": "8.4.47",
+    "tailwindcss": "^4.0.0",
     "typescript": "5.6.3"
   }
 }
